start with random agent

--- a/p1_navigation/Makefile
+++ b/p1_navigation/Makefile
@@ -1,2 +1,5 @@
 install:
 	git clone --depth 1 --no-checkout https://github.com/udacity/deep-reinforcement-learning.git udacity_deep_reinforcement_learning && cd udacity_deep_reinforcement_learning && git checkout master -- python/ && cd python && pip install .
+
+train:
+	python navigation.py
