--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ navigation-venv/
 udacity_deep_reinforcement_learning/
 .vscode/
 p1_navigation/unity-environment.log
+p2_continuous-control/control-venv/
+Reacher.app
