start to build model

--- a/p2_continuous-control/Makefile
+++ b/p2_continuous-control/Makefile
@@ -6,3 +6,9 @@ install:
 	pip install . &&\
 	cd ../.. &&\
 	pip install -r requirements.txt
+
+train:
+	python continuous_control.py
+
+tensorboard:
+	tensorboard --logdir=runs/
