--- a/p2_continuous-control/requirements.txt
+++ b/p2_continuous-control/requirements.txt
@@ -4,5 +4,6 @@ tensorboard==1.15
 git+https://github.com/openai/baselines.git
 ray==0.8.7
 tabulate
-tensorboardX
-cloudpickle==1.6.0
+tensorboardX #todo
+cloudpickle==1.6.0 #todo
+grpcio==1.31.0 #todo
