--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ p2_continuous-control/control-venv/
 Reacher.app
 p2_continuous-control/runs/
 p2_continuous-control/unity-environment.log
+Reacher_Linux_NoVis/
