--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ p2_continuous-control/control-venv/
 Reacher.app
 p2_continuous-control/unity-environment.log
 Reacher_Linux_NoVis/
+Tennis.app
+p3_collab-compet/collab-venv
