--- a/p3_collab-compet/Makefile
+++ b/p3_collab-compet/Makefile
@@ -8,7 +8,7 @@ install:
 	pip install -r requirements.txt
 
 train:
-	python collab-competition.py
+	python collab_competition.py
 
 tune:
 	python tune.py
