--- a/p3_collab-compet/requirements.txt
+++ b/p3_collab-compet/requirements.txt
@@ -2,8 +2,4 @@ torch==1.6.0
 tensorflow==1.15.2
 tensorboard==1.15
 git+https://github.com/openai/baselines.git
-#ray==0.8.7 #todo
-#tabulate
-#tensorboardX
-#cloudpickle==1.6.0
-#grpcio==1.31.0
+ray[tune]==0.8.7
